wasm/fasta_info_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_g611hr1z/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/76797b7b5f2d1f5c275e3c0bce61ec581be35314.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/76797b7b5f2d1f5c275e3c0bce61ec581be35314.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/c8638542ea38438fe8be7fdbe1466365ea5ea1bf.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/c8638542ea38438fe8be7fdbe1466365ea5ea1bf.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/58853183f008440e70472ef17429e95bc00cd1fb.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/58853183f008440e70472ef17429e95bc00cd1fb.json" for subsequent builds)
cache:INFO:  - ok
